--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -43,6 +43,10 @@ openssl = { version = "0.10.61", features = ["vendored"] }
 reqwest = { version = "0.12.4", features = ["blocking"] }
 url = "2.5.0"
 
+# Live
+regex = "1.11.1"
+rocket = "0.5.1"
+
 [dev-dependencies]
 assert_cmd = "2.0.14"
 httpmock = "0.7.0"
