--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -47,7 +47,7 @@ url = "2.5.0"
 bytes = "1.10.1"
 chrono = "0.4.40"
 dashmap = "6.1.0"
-dash-mpd = { version = "0.18.2", path = "../../dash-mpd-rs" }
+dash-mpd = { version = "0.18.2" }
 itertools = "0.8.0"
 m3u8-rs = { version = "6.0.0", path = "../../m3u8-rs"}
 regex = "1.11.1"
