--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -47,10 +47,12 @@ chrono = "0.4.40"
 dashmap = "6.1.0"
 dash-mpd = { version = "0.18.2" }
 itertools = "0.8.0"
+m3u8-rs = "6.0.0"
 regex = "1.11.1"
 reqwest = { version = "0.12.4", features = ["blocking"] }
 rocket = { version = "0.5.1", features = ["json"] }
 rocket_cors = "0.6.0"
+tokio-retry = "0.3.0"
 
 [target.'cfg(not(target_os = "wasi"))'.dependencies]
 async-std = { version = "1.12", features = ["attributes"] }
